crates/nash-report/src/snapshots/nash_report__render__tests__arbitrary_labels_and_related_sources_are_rendered.snap
---
source: crates/nash-report/src/render.rs
description: "Code:\n\nMain.nash:\n\nf = x + 1\n\nOther.nash:\n\nx = y"
---
nash::diagnostic

  × Before:
   ╭─[member/src/Main.nash:1:5]
 1 │ f = x + 1
   · ┬   ─   ┬
   · │   │   ╰── second requirement
   · ╰── first requirement
   ╰────
  help: After.

Error: nash::diagnostic

  × Declared here.
   ╭─[member/src/Other.nash:1:5]
 1 │ x = y
   ·     ─
   ╰────
