crates/nash-report/src/snapshots/nash_report__render__tests__render_eof_insertion.snap
---
source: crates/nash-report/src/render.rs
description: "Code:\n\nf ="
---
nash::diagnostic

  × I need an expression here:
   ╭─[Main.nash:1:4]
 1 │ f =
   ·    ─
   ╰────
  help: Add an expression after the equals sign.
