crates/nash-report/src/snapshots/nash_report__render__tests__render_no_snippet_report.snap
---
source: crates/nash-report/src/render.rs
expression: plain(&none)
---
nash::diagnostic

  × Before:
  help: After.
