crates/nash-report/src/snapshots/nash_report__render__tests__render_pair_report.snap
---
source: crates/nash-report/src/render.rs
expression: output
---
nash::diagnostic

  × Before:
   ╭─[Main.nash:1:5]
 1 │ f = x + 1
   · ┬   ┬
   · │   ╰── second
   · ╰── first
   ╰────
  help: After.
