crates/nash-report/src/snapshots/nash_report__render__tests__render_snippet_report.snap
---
source: crates/nash-report/src/render.rs
expression: plain(&snippet())
---
TEST

  × Before:
   ╭─[Main.nash:1:5]
 1 │ f = x + 1
   ·     ─
   ╰────
  help: After.
