crates/nash-report/src/snapshots/nash_report__render__tests__render_warning_header.snap
---
source: crates/nash-report/src/render.rs
description: "Code:\n\nf = x + 1"
---
nash::diagnostic

  ⚠ Before:
   ╭─[Main.nash:1:5]
 1 │ f = x + 1
   ·     ─
   ╰────
  help: After.
