crates/nash-report/src/snapshots/nash_report__render__tests__render_zero_width_region_gets_caret.snap
---
source: crates/nash-report/src/render.rs
expression: plain(&zero)
---
nash::diagnostic

  × Before:
   ╭─[Main.nash:1:5]
 1 │ f = x + 1
   ·     ─
   ╰────
  help: After.
